Feat: various change

--- a/src/main/lan/it.properties
+++ b/src/main/lan/it.properties
@@ -3,4 +3,4 @@ Email=Email
 InsertPassword=Inserisci la password
 Password=Password
 PasswordConfirmation=Conferma password
-Login=Accedi
+Save=Salva
