Arise from the bug

--- a/src/main/resources/lan/it.properties
+++ b/src/main/resources/lan/it.properties
@@ -1,6 +1,13 @@
-InsertEmail=Inserisci l'indirizzo email
-Email=Email
-InsertPassword=Inserisci la password
-Password=Password
-PasswordConfirmation=Conferma password
-Save=Salva
+# button
+Search=Ricerca
+Add=Aggiungi
+Change mode=Cambia modalità
+Exit=Esci
+# label
+Contact=Contatto
+Name=Nome
+Surname=Cognome
+Age=Età
+Phone=Cell
+City=Città
+Home=Resetta
